<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llCameraOption"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@string/btn_camera"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableTopCompat="@drawable/ic_camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGalleryOption"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@string/btn_gallery"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableTopCompat="@drawable/ic_gallery" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVideoOption"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@string/btn_video"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableTopCompat="@drawable/ic_video" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/red_circle"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_vector_close" />
</LinearLayout>